[package]
name = "syncgroup"
version = "0.1.0"
edition = "2018"
authors = ["Leon Ding <ding@ibyte.me>"]
description = "A Sync Group for a collection of thread to finish."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
